# remud

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.build  LICENSE  README.md  dashboard.json  docker-compose.yaml  rustfmt.toml  telegraf.conf  todo.md
colors/: join.jq  named_idx.json  rgb.json  simpler.json  xterm.json
docs/: README.md  config.toml  package-lock.json  package.json
docs/config/_default/: config.toml
docs/config/prod/: config.toml
docs/content/: _index.md
docs/content/development/: _index.md  bugs.md  colors.md  fsm.md  immortals.md  script-web-api.md  scripting.md  testing.md  web-api.md
docs/content/guide/: _index.md  commands.md  the-meaning-of-colors.md
docs/themes/remud/: theme.toml
docs/themes/remud/archetypes/: default.md
docs/themes/remud/assets/css/: main.css  postcss.config.js
docs/themes/remud/layouts/: index.html
docs/themes/remud/layouts/_default/: baseof.html  list.html  single.html  terms.html
docs/themes/remud/layouts/partials/: footer.html  head.html  nav.html  tags-line.html
docs/themes/remud/layouts/shortcodes/: color-grid.html  color.html  expand.html
migrations/: 1_create_and_init_rooms.sql  1_create_initial_tables.sql  1_create_tables.sql  20210926183135_create_tokens_table.sql  20211001183037_remove_object_not_nulls.sql  2_create_hook_tables.sql  2_objects_tables.sql  3_add_void_room.sql  3_create_regions.sql  4_add_room_name_player_description.sql  4_add_user_tables.sql  5_add_object_prototypes.sql  5_add_player_inventory.sql  6_add_inherit_scripts_flag.sql  6_add_player_room.sql  7_add_object_flags.sql  7_add_player_flags.sql  8_add_objects_fk_on_prototypes.sql  8_add_scripts_table.sql
remud-bin/: Cargo.toml
remud-bin/src/: main.rs
remud-lib/: Cargo.toml
remud-lib/keys/: jwt_key
remud-lib/remud-macros/: Cargo.toml
remud-lib/remud-macros/src/: lib.rs
remud-lib/remud-test/: Cargo.toml
remud-lib/remud-test/src/: lib.rs  telnet.rs  web.rs
remud-lib/src/: color.rs  ecs.rs  lib.rs  macros.rs  metrics.rs  stash.rs  text.rs
remud-lib/src/engine/: client.rs  fsm.rs  mod.rs  negotiate_login.rs  update_password.rs
remud-lib/src/engine/db/: mod.rs  player.rs  world.rs
remud-lib/src/engine/dialog/: mod.rs
remud-lib/src/engine/fsm/: mod.rs  negotiate_login.rs  update_password.rs
remud-lib/src/engine/persist/: mod.rs  object.rs  player.rs  prototype.rs  room.rs  script.rs
remud-lib/src/telnet/: mod.rs  protocol.rs
remud-lib/src/web/: auth.rs  mod.rs  scripts.rs  security.rs  ws.rs
remud-lib/src/world/: ecs.rs  mod.rs
remud-lib/src/world/action/: attributes.rs  commands.rs  communicate.rs  mod.rs  movement.rs  object.rs  observe.rs  system.rs  targeting.rs
remud-lib/src/world/action/immortal/: mod.rs  object.rs  player.rs  prototype.rs  room.rs  script.rs
remud-lib/src/world/fsm/: mod.rs  states.rs  system.rs
remud-lib/src/world/scripting/: actions.rs  execution.rs  mod.rs  modules.rs  systems.rs  time.rs
remud-lib/src/world/types/: mod.rs  object.rs  player.rs  room.rs
remud-lib/tests/: test_communication.rs  test_e2e.rs  test_login.rs  test_objects.rs  test_prototypes.rs  test_room.rs  test_rooms.rs  test_scripts_crud.rs  test_scripts_object_attachment.rs  test_scripts_object_trigger.rs  test_scripts_object_triggers.rs  test_scripts_objects.rs  test_scripts_player.rs  test_scripts_player_attachment.rs  test_scripts_player_trigger.rs  test_scripts_player_triggers.rs  test_scripts_prototypes.rs  test_scripts_room_attachment.rs  test_scripts_room_triggers.rs  test_scripts_rooms.rs  test_scripts_self.rs  test_scripts_world.rs  test_web_auth.rs  test_web_script.rs
remud-lib/tests/it/: communication.rs  login.rs  main.rs  object.rs  prototype.rs  room.rs  scripts_object_attachment.rs  scripts_object_trigger.rs  scripts_player_attachment.rs  scripts_room_attachment.rs  scripts_room_trigger.rs  scripts_self.rs  scripts_world.rs  web_auth.rs  web_script.rs
remud-lib/tests/it/support/: mod.rs  telnet.rs  web.rs
src/: color.rs  engine.rs  main.rs  test_e2e.rs  text.rs
src/engine/: action.rs  client.rs  clients.rs  db.rs  macros.rs  mod.rs  persistence.rs  world.rs
src/engine/db/: mod.rs  player.rs  world.rs
src/engine/persist/: mod.rs  object.rs  player.rs  prototype.rs  room.rs  script.rs
src/telnet/: mod.rs
src/web/: mod.rs
src/world/: action.rs  mod.rs
src/world/action/: attributes.rs  commands.rs  communicate.rs  mod.rs  movement.rs  object.rs  observe.rs  player.rs  room.rs  system.rs
src/world/action/immortal/: mod.rs  object.rs  player.rs  prototype.rs  room.rs  script.rs
src/world/fsm/: mod.rs  states.rs  system.rs
src/world/scripting/: actions.rs  execution.rs  mod.rs  modules.rs  timed_actions.rs
src/world/types/: mod.rs  object.rs  player.rs  players.rs  room.rs
terraform/: .gitignore  dns.tf  service.tf  variables.tf  vpc.tf
web-client/: package-lock.json  package.json
web-client/public/: index.html  manifest.json
web-client/src/: App.test.tsx  App.tsx  env.ts  index.css  index.tsx
web-client/src/auth/: auth-context.tsx  login-button.tsx  login-form.tsx  login-page.tsx
web-client/src/hooks/: use-auth-context.ts  use-auth.ts  use-chat.ts  use-get-script.ts  use-list-scripts.ts  use-login-api.ts  use-observable.ts  use-scripts-api.ts
web-client/src/models/: auth-api.ts  scripts-api.ts
web-client/src/mud/: connection-status.tsx  prompt.tsx  terminal-input.tsx  terminal-page.tsx  terminal.tsx
web-client/src/script-managment/: compile-status.tsx  create-page.tsx  edit-page.tsx  error-display.tsx  list-scripts.tsx  script-form.css  script-form.tsx  script-management.tsx
web-client/src/services/: socket.context.tsx  socket.service.ts
web-client/src/toolbar/: toolbar.tsx
