[package]
name = "remud"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10", features = ["macros", "net", "rt-multi-thread", "time", "sync"] }
bytes = "1.1"
tokio-util = { version = "0.6", features = ["codec"] }
futures = "0.3"
lazy_static = "1.4"
bitflags = "1.3"
tracing = "0.1"
tracing-subscriber = "0.2"
bevy_ecs = "0.5"
ascii = "1.0"
regex = "1.5"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "sqlite"] }
itertools = "0.10.1"
