[package]
name = "remud"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ascii = "1.0"
bevy_ecs = "0.5"
bitflags = "1.3"
bytes = "1.1"
futures = "0.3"
itertools = "0.10"
lazy_static = "1.4"
regex = "1.5"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.10", features = ["macros", "net", "rt-multi-thread", "time", "sync"] }
tokio-util = { version = "0.6", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = "0.2"
async-trait = "0.1.51"
