[package]
name = "remud"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argon2 = "0.3"
ascii = "1.0"
async-trait = "0.1"
bevy_app = "0.5"
bevy_ecs = "0.5"
bitflags = "1.3"
bytes = "1.1"
futures = "0.3"
itertools = "0.10"
lazy_static = "1.4"
rand = "0.8"
rayon = "1.5"
regex = "1.5"
rhai = { version = "1.0", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "sqlite"] }
strum = { version = "0.21", features = ["derive"] }
thiserror = "1.0"
tide = "0.16"
tokio = { version = "1.10", features = ["macros", "net", "rt-multi-thread", "time", "sync"] }
tokio-util = { version = "0.6", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = "0.2"
either = "1.6.1"
