[package]
name = "remud-bin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
remud-lib = { path = "../remud-lib", version = "0.1"}
tokio = { version = "1.10", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2"