[package]
name = "remud-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "remud"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.4"
remud-lib = { path = "../remud-lib", version = "0.1"}
tokio = { version = "1.10", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-bunyan-formatter = "0.2.6"
