[package]
name = "remud-lib"
version = "0.1.0"
edition = "2018"

[dependencies]
acme-lib = "0.8"
anyhow = "1.0"
argon2 = "0.3"
ascii = "1.0"
async-trait = "0.1"
bevy_app = "0.5"
bevy_core = "0.5"
bevy_ecs = "0.5"
bitflags = "1.3"
bytes = "1.1"
cadence = "0.24"
either = "1.6"
futures = "0.3"
itertools = "0.10"
jwt-simple = "0.10"
once_cell = "1.8"
priority-queue = "1.2"
rand = "0.8"
rayon = "1.5"
regex = "1.5"
rhai = { version = "1.0", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite"] }
strum = { version = "0.22", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.10", features = ["macros", "net", "rt-multi-thread", "time", "sync"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-cadence = "0.3"
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_debug"] }
tracing-futures = "0.2.5"
uuid = "0.8"
warp = { version = "0.3", features = ["tls"] }

[dev-dependencies]
tracing-subscriber = "0.2"
reqwest = { version = "0.11", features = ["json"] }
telnet = "0.2"
