[package]
name = "remud-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
once_cell = "1.8"
remud-lib = { path = "..", version = "0.1"}
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = "1.0"
strum = { version = "0.21", features = ["derive"] }
telnet = "0.1"
tokio = { version = "1.10", features = ["macros", "net", "rt-multi-thread", "time", "sync"] }
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_debug"] }
tracing-log = "0.1"
tracing-subscriber = "0.2"
